# jimmy-api

./: README.md  pyproject.toml
src/jimmy/: __init__.py  _client.py  _constants.py  _conversation.py  _exceptions.py  _models.py  _parser.py  _streaming.py  _types.py
tests/: test_client.py  test_conversation.py  test_parser.py
