[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jimmy"
version = "0.1.0"
description = "Unofficial Python client for chatjimmy.ai"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-httpx>=0.34", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/jimmy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
